sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__values_grid__tests__snapshots__render__base_2_candidates_coordinates.snap
---
source: sudoku-rs/src/grid/format/values_grid.rs
expression: ValuesGrid.render(&grid)
---
 0 0 │ 0 0 
 0 0 │ 0 0 
─────┼─────
 0 0 │ 0 0 
 0 0 │ 0 0
