sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__values_grid__tests__snapshots__render__base_2_sample_0.snap
---
source: sudoku-rs/src/grid/format/values_grid.rs
expression: ValuesGrid.render(&grid)
---
 0 3 │ 4 0 
 4 0 │ 0 2 
─────┼─────
 1 0 │ 0 3 
 0 2 │ 1 0
