sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__values_grid__tests__snapshots__render__base_2_solved.snap
---
source: sudoku-rs/src/grid/format/values_grid.rs
expression: ValuesGrid.render(&grid)
---
 2 3 │ 4 1 
 4 1 │ 3 2 
─────┼─────
 1 4 │ 2 3 
 3 2 │ 1 4
