sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__values_grid__tests__snapshots__render__base_3_sample_0.snap
---
source: sudoku-rs/src/grid/format/values_grid.rs
expression: ValuesGrid.render(&grid)
---
 8 0 0 │ 0 0 0 │ 0 0 0 
 0 0 3 │ 6 0 0 │ 0 0 0 
 0 7 0 │ 0 9 0 │ 2 0 0 
───────┼───────┼───────
 0 5 0 │ 0 0 7 │ 0 0 0 
 0 0 0 │ 0 4 5 │ 7 0 0 
 0 0 0 │ 1 0 0 │ 0 3 0 
───────┼───────┼───────
 0 0 1 │ 0 0 0 │ 0 6 8 
 0 0 8 │ 5 0 0 │ 0 1 0 
 0 9 0 │ 0 0 0 │ 4 0 0
