sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__values_grid__tests__snapshots__render__base_3_sample_3.snap
---
source: sudoku-rs/src/grid/format/values_grid.rs
expression: ValuesGrid.render(&grid)
---
 0 0 4 │ 5 0 2 │ 1 7 8 
 1 0 0 │ 0 9 0 │ 0 3 0 
 0 0 0 │ 8 0 0 │ 0 0 4 
───────┼───────┼───────
 6 0 0 │ 4 5 0 │ 0 0 0 
 0 7 0 │ 9 0 0 │ 0 1 2 
 8 0 1 │ 2 0 3 │ 5 0 0 
───────┼───────┼───────
 4 0 0 │ 0 0 0 │ 0 0 9 
 3 5 0 │ 0 6 0 │ 8 0 7 
 0 9 0 │ 3 0 0 │ 6 2 0
