sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__values_grid__tests__snapshots__render__base_5_sample_0.snap
---
source: sudoku-rs/src/grid/format/values_grid.rs
expression: ValuesGrid.render(&grid)
---
 0 0 m o 0 │ 0 k n d 0 │ 0 0 0 0 a │ 0 0 0 6 e │ 0 c 0 0 0 
 2 0 0 0 1 │ 3 0 0 0 p │ 0 6 c 0 8 │ 0 7 0 o m │ e 4 d 0 0 
 0 0 0 0 d │ m 2 6 0 0 │ i 7 e j 0 │ 0 0 l 0 c │ a n 0 k f 
 c 0 l 7 b │ o j 0 0 e │ d 0 k 0 0 │ 3 0 0 0 0 │ 0 0 h 0 g 
 0 j 9 0 0 │ 0 h g 0 0 │ m 2 0 o b │ n d a i k │ 7 8 0 0 l 
───────────┼───────────┼───────────┼───────────┼───────────
 0 0 0 0 0 │ 0 n 0 p 0 │ j c 0 0 0 │ o h d 0 0 │ 9 6 g e 0 
 j 9 3 0 g │ 4 8 o 1 0 │ 2 0 0 0 6 │ p 0 c 0 5 │ 0 0 l i n 
 5 0 0 0 m │ f 0 h 0 b │ k p 0 g 0 │ l 0 n 9 1 │ o 2 0 0 4 
 0 0 0 2 o │ d 0 m k 0 │ 0 0 5 0 l │ f 0 0 0 0 │ 0 h p 0 8 
 0 0 1 0 0 │ 0 g 0 0 0 │ 0 3 n b o │ 0 0 6 a 4 │ 0 k 0 j 5 
───────────┼───────────┼───────────┼───────────┼───────────
 0 0 0 0 0 │ 0 0 5 0 n │ h i l 0 0 │ 6 0 b 0 2 │ d 0 0 0 0 
 3 c 0 i l │ 1 0 0 o j │ b 0 0 0 0 │ 5 p k 0 n │ 0 e 0 0 0 
 0 0 g 0 0 │ 2 3 0 6 8 │ c 0 o 5 7 │ 0 l e 0 0 │ 4 0 b 0 9 
 0 0 0 0 0 │ 0 0 l e c │ n 4 0 0 1 │ 9 g 0 j 0 │ 0 a i m 0 
 0 1 b 0 2 │ 0 0 f 4 h │ p 0 j 0 g │ a 0 8 0 3 │ k l 7 0 0 
───────────┼───────────┼───────────┼───────────┼───────────
 4 0 2 0 0 │ g 0 c 0 f │ 0 n 0 8 0 │ k 0 0 l 0 │ j 1 0 0 d 
 0 0 c k a │ 0 7 0 0 d │ 0 l g 0 5 │ 0 4 o e 0 │ 8 0 0 0 i 
 0 0 0 g i │ 5 0 0 h 0 │ 0 0 2 0 c │ 0 3 m 8 0 │ 0 f 0 4 0 
 l m 0 j h │ k 1 0 0 0 │ 0 b 0 4 0 │ d 0 0 n f │ 0 7 e 0 o 
 7 0 d 0 0 │ e 4 8 m 3 │ 1 0 h f k │ 0 2 0 p 0 │ 0 0 a 0 0 
───────────┼───────────┼───────────┼───────────┼───────────
 6 0 0 0 0 │ n l 4 7 i │ 3 0 p 1 0 │ 8 0 0 d 0 │ 0 0 0 a e 
 o 0 0 0 0 │ 0 e 9 0 0 │ 0 0 0 a 0 │ 0 f 2 0 l │ 0 g n 0 7 
 i 0 k b 0 │ h 0 d a 0 │ 0 0 0 c j │ e n p 5 0 │ 6 o 4 l 1 
 a 0 7 0 4 │ 0 5 0 0 o │ e f 0 0 2 │ 0 0 g 0 0 │ p 0 j c m 
 d h p f e │ 0 6 0 0 0 │ 0 0 0 i n │ m a 4 0 7 │ 3 5 0 8 k
